Fixed issue with the logo on firefox and changed the favicon

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -1,12 +1,14 @@
 /* Deafult Margin & Padding */
 /*-- Margin Top --*/
 .logo {
-  zoom: 0.38;
+  width: 60px;
+  height: 60px;
   object-fit: cover;
 }
 @media (max-width: 1100px) {
   .logo {
-    zoom: 0.33;
+    width: 50px;
+    height: 50px;
   }
 }
 .logo-nav-mobile {
